alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ body{
     margin-bottom : 20px;
 }
 #venueDetails img.garden{
-    width : 95%;
+    width : 100%;
     padding : 0.5%;
     border: 4px dashed #49b3d3;
     border-radius: 10px;
